# AacEncode

AacEncode/: CMakeLists.txt  build.sh
AacEncode/project/sdk/faac/: readMe.txt
AacEncode/project/src/Codec/AAC/: PcmBuffer.cpp  PcmBuffer.h  PcmToAac.cpp  PcmToAac.h
AacEncode/project/src/Public/: Type.h
AacEncode/project/src/Startup/: main.cpp
